--- a/app/src/main/res/layout/layout_card_repository.xml
+++ b/app/src/main/res/layout/layout_card_repository.xml
@@ -26,10 +26,10 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_repository"
-                android:tint="@color/colorPrimary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/colorPrimary" />
 
             <TextView
                 android:id="@+id/text_view_layout"
